--- a/app/Resources/static/themes/material/css/layout.scss
+++ b/app/Resources/static/themes/material/css/layout.scss
@@ -18,6 +18,12 @@ body {
   border-bottom: 1px solid #ddd;
 }
 
+nav,
+body:not(.reset-left) main,
+footer {
+  padding-left: 240px;
+}
+
 main,
 #content,
 .valign-wrapper {
