Reduced border-radius for tags

--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -132,6 +132,7 @@
       background-color: $blueAccentColor;
       padding: 0 15px 0 10px;
       margin: auto 2px;
+      border-radius: 6px;
 
       a,
       i {
