--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -200,6 +200,7 @@ a.original:not(.waves-effect) {
       background-color: $blueAccentColor;
       padding: 0 15px 0 10px;
       margin: auto 2px;
+      border-radius: 6px;
 
       a,
       i {
