Fixed internal settings form

--- a/app/Resources/CraueConfigBundle/views/Settings/modify.html.twig
+++ b/app/Resources/CraueConfigBundle/views/Settings/modify.html.twig
@@ -33,8 +33,7 @@
                     {{ 'modify_settings' | trans({}, 'CraueConfigBundle') }}
                 </button>
 
-                {{ form_rest(form) }}
-                {{ form_end(form) }}
+                {{ form_widget(form._token) }}
             </div>
         </div>
     </div>
