Fix mobile view and update asset deps
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -2,16 +2,19 @@
    Media queries
    ========================================================================== */
 
+@media only screen and (min-width: 992px) {
+  nav,
+  body:not(.entry) main,
+  footer {
+    padding-left: 240px;
+  }
+}
+
 @media only screen and (max-width: 992px) {
   header,
   main,
-  footer {
-    padding-left: 0;
-  }
-
-  nav,
-  main,
-  footer {
+  footer,
+  nav {
     padding-left: 0;
   }
 
