Fix translations on QR code instructions

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
@@ -82,7 +82,7 @@
         <fieldset class="w500p inline">
             <div class="row">
                 <h3>{{ 'config.form_settings.android_configuration'|trans }}</h3>
-                <a href="wallabag://{{ app.user.username }}@{{ wallabag_url }}">Touch here to prefill your Android application</a>
+                <a href="wallabag://{{ app.user.username }}@{{ wallabag_url }}">{{ 'config.form_settings.android_instruction' | trans }}</a>
                 <br/>
                 <img id="androidQrcode" />
                 <script>
