Add css on share public page

--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/share.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Entry/share.html.twig
@@ -14,6 +14,11 @@
         <meta name="twitter:site" content="@wallabagapp" />
         <meta name="twitter:title" content="{{ entry.title|e|raw }}" />
         <meta name="twitter:description" content="{{ entry.content|striptags|slice(0, 300)|raw }}&hellip;" />
+        {% if not app.debug %}
+            <link rel="stylesheet" href="{{ asset('bundles/wallabagcore/public.css') }}">
+        {% endif %}
+
+        <script src="{{ asset('bundles/wallabagcore/public' ~ (app.debug ? '.dev' : '') ~ '.js') }}"></script>
     </head>
     <body>
         <header>
