Add shortcut to add tags
This adds "t" as a shortcut to add tags to an article.

Signed-off-by: Jan Losinski <losinski@wh2.tu-dresden.de>

--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Static/howto.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Static/howto.html.twig
@@ -147,6 +147,10 @@
                                 <td>{{ 'howto.shortcuts.toggle_favorite'|trans }}</td>
                             </tr>
                             <tr>
+                                <td><code>t</code></td>
+                                <td>{{ 'entry.view.left_menu.add_a_tag'|trans }}</td>
+                            </tr>
+                            <tr>
                                 <td><code>a</code></td>
                                 <td>{{ 'howto.shortcuts.toggle_archive'|trans }}</td>
                             </tr>
