Empty currentTag should be null
And when a parameter is null, it won't appear in the url like `?tag=`.

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entries.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entries.html.twig
@@ -86,7 +86,7 @@
 
     <!-- Export -->
     <aside id="download-form">
-    {% set currentTag = '' %}
+    {% set currentTag = null %}
     {% if tag is defined %}
         {% set currentTag = tag %}
     {% endif %}
