Entry: handle originUrl in edit form, update translations
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/edit.html.twig
@@ -27,6 +27,11 @@
                             {{ form_label(form.url) }}
                             {{ form_widget(form.url) }}
                         </div>
+
+                        <div class="input-field s12">
+                            {{ form_label(form.origin_url) }}
+                            {{ form_widget(form.origin_url) }}
+                        </div>
                         <br>
 
                         {{ form_widget(form.save, {'attr': {'class': 'btn waves-effect waves-light'}}) }}
