--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -108,12 +108,17 @@
 
       .stats {
         font-size: 0.8em;
-        margin: 8px 15px 5px;
+        margin: 8px 5px 5px;
 
         li {
           display: inline-flex;
           vertical-align: middle;
-          margin: 0 5px;
+          margin: 3px 5px;
+
+          i.material-icons {
+            color: #3e3e3e;
+            margin-right: 3px;
+          }
         }
 
         a {
