--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -4,7 +4,7 @@
 
 @media only screen and (min-width: 992px) {
   nav,
-  body:not(.entry) main,
+  body:not(.entry):not(.login) main,
   footer {
     padding-left: 240px;
   }
