--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/layout.html.twig
@@ -3,13 +3,13 @@
 {% block css %}
     {{ parent() }}
     {% if not app.debug %}
-        <link rel="stylesheet" href="{{ asset('bundles/wallabagcore/baggy.css') }}">
+        <link rel="stylesheet" href="{{ asset('wallassets/baggy.css') }}">
     {% endif %}
 {% endblock %}
 
 {% block scripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles/wallabagcore/baggy' ~ (app.debug ? '.dev' : '') ~ '.js') }}"></script>
+    <script src="{{ asset('wallassets/baggy' ~ (app.debug ? '.dev' : '') ~ '.js') }}"></script>
 {% endblock %}
 
 {% block header %}
@@ -17,7 +17,7 @@
         <h1 class="logo">
             {% block logo %}
                 <a title="{{ 'menu.left.back_to_unread'|trans }}" href="{{ path('unread') }}">
-                    <img width="100" height="100" src="{{ asset('bundles/wallabagcore/themes/_global/img/logo-w.png') }}" alt="wallabag logo" />
+                    <img width="100" height="100" src="{{ asset('wallassets/themes/_global/img/logo-w.png') }}" alt="wallabag logo" />
                 </a>
             {% endblock %}
         </h1>
