Add support of originUrl field in baggy entry view

--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entry.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Entry/entry.html.twig
@@ -71,6 +71,14 @@
             </i>
 
             <span class="tool link"><i class="material-icons link">comment</i> {{ 'entry.view.annotations_on_the_entry'|transchoice(entry.annotations | length) }}</span>
+
+            {% if entry.originUrl is not empty %}
+                <i class="material-icons" title="Provided by">launch</i>
+                <a href="{{ entry.originUrl|e }}" target="_blank" class="tool">
+                    {{ entry.originUrl|striptags|removeSchemeAndWww|truncate(32) }}
+                </a>
+            {% endif %}
+
             <aside class="tags">
                 <div class="card-entry-tags">
                 {% for tag in entry.tags %}
