Figure image and figcaption centered on share page

--- a/app/Resources/static/themes/_global/share.scss
+++ b/app/Resources/static/themes/_global/share.scss
@@ -380,6 +380,14 @@ tbody {
   border-width: 1px 0;
 }
 
+figure {
+  text-align: center;
+}
+
+figure > * {
+  margin: 0 auto;
+}
+
 header {
   text-align: center;
 }
